--- a/AngularCore/package.json
+++ b/AngularCore/package.json
@@ -21,12 +21,12 @@
     "@types/chai": "4.0.1",
     "@types/jasmine": "2.5.53",
     "@types/webpack-env": "1.13.0",
-    "angular2-router-loader": "0.3.5",
+    "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
     "awesome-typescript-loader": "3.2.1",
-    "bootstrap": "3.3.7",
+    "bootstrap": "^4.1.1",
     "chai": "4.0.2",
     "css": "2.2.1",
     "css-loader": "0.28.4",
@@ -38,7 +38,7 @@
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
     "jasmine-core": "2.6.4",
-    "jquery": "3.2.1",
+    "jquery": "^3.2.1",
     "json-loader": "0.5.4",
     "karma": "1.7.0",
     "karma-chai": "0.1.0",
@@ -58,5 +58,9 @@
     "webpack-hot-middleware": "2.18.2",
     "webpack-merge": "4.1.0",
     "zone.js": "0.8.12"
+  },
+  "dependencies": {
+    "popper.js": "^1.14.3",
+    "tether": "^1.4.4"
   }
 }
