--- a/AngularCore/package.json
+++ b/AngularCore/package.json
@@ -26,7 +26,7 @@
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
     "awesome-typescript-loader": "3.2.1",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "3.3.7",
     "chai": "4.0.2",
     "css": "2.2.1",
     "css-loader": "0.28.4",
@@ -38,7 +38,7 @@
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
     "jasmine-core": "2.6.4",
-    "jquery": "^3.2.1",
+    "jquery": "3.2.1",
     "json-loader": "0.5.4",
     "karma": "1.7.0",
     "karma-chai": "0.1.0",
@@ -58,9 +58,5 @@
     "webpack-hot-middleware": "2.18.2",
     "webpack-merge": "4.1.0",
     "zone.js": "0.8.12"
-  },
-  "dependencies": {
-    "popper.js": "^1.14.3",
-    "tether": "^1.4.4"
   }
 }
